use DataInput and DataOutput streams for phase plan serialization and add testing for serialization